--- a/tv/src/main/res/layout/fragment_guide.xml
+++ b/tv/src/main/res/layout/fragment_guide.xml
@@ -7,6 +7,28 @@
     android:layout_height="match_parent"
     android:background="@color/default_background">
 
+    <LinearLayout
+        android:id="@+id/offline_banner"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:background="#B3261E"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingStart="24dp"
+        android:paddingEnd="24dp"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No internet connection"
+            android:textColor="@android:color/white"
+            android:textSize="14sp" />
+    </LinearLayout>
+
     <TextView
         android:id="@+id/guide_title"
         android:layout_width="wrap_content"
@@ -16,7 +38,8 @@
         android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/offline_banner"
+        app:layout_goneMarginTop="24dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"/>
 
