--- a/tv/src/main/res/layout/fragment_guide.xml
+++ b/tv/src/main/res/layout/fragment_guide.xml
@@ -65,6 +65,55 @@
         app:layout_constraintTop_toTopOf="@+id/guide_title"
         android:layout_marginEnd="32dp"/>
 
+    <LinearLayout
+        android:id="@+id/guide_controls"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="32dp"
+        app:layout_constraintTop_toBottomOf="@id/guide_time"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:id="@+id/guide_prev"
+            android:layout_width="80dp"
+            android:layout_height="36dp"
+            android:background="@drawable/bg_guide_control"
+            android:gravity="center"
+            android:text="Previous"
+            android:textColor="@android:color/white"
+            android:textSize="12sp"
+            android:focusable="true"
+            android:focusableInTouchMode="true" />
+
+        <TextView
+            android:id="@+id/guide_now"
+            android:layout_width="64dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/bg_guide_control"
+            android:gravity="center"
+            android:text="Now"
+            android:textColor="@android:color/white"
+            android:textSize="12sp"
+            android:focusable="true"
+            android:focusableInTouchMode="true" />
+
+        <TextView
+            android:id="@+id/guide_next"
+            android:layout_width="64dp"
+            android:layout_height="36dp"
+            android:background="@drawable/bg_guide_control"
+            android:gravity="center"
+            android:text="Next"
+            android:textColor="@android:color/white"
+            android:textSize="12sp"
+            android:focusable="true"
+            android:focusableInTouchMode="true" />
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/time_axis"
         android:layout_width="0dp"
