--- a/tv/src/main/res/layout/item_guide_row.xml
+++ b/tv/src/main/res/layout/item_guide_row.xml
@@ -9,6 +9,7 @@
         android:id="@+id/channel_cell"
         android:layout_width="200dp"
         android:layout_height="match_parent"
+        android:background="@drawable/bg_channel_cell"
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:paddingStart="20dp"
